# cstr-model-optimisation

./: .gitignore  cstr_parameters_recommended.md  cstr_sbi_execution_plan.md  cstr_sbi_research_spec.md
research_project/: .gitattributes  .gitignore  README.md  add_nb10_sequential_drift.py  pyproject.toml
research_project/data/: 03_feature_ablation.csv  03_feature_ablation_29d.csv  03_feature_shortlist.json  03_feature_shortlist_29d.json  observations.npz  scenario_configs.csv
research_project/docs/: m0_baseline_benchmarks.md  m0_smoke_test_results.json  simulator.md
research_project/notebooks/: 00_m0_smoke_test_results.ipynb  01_model_demonstration.ipynb  01a_model_demonstration_pilario.ipynb  02_data_generation.ipynb  03_summary_statistics_design.ipynb  04_sbi_training.ipynb  05_mcmc_baseline.ipynb  05a_sbi_classification.ipynb  06_multi_sample_study.ipynb  07_failure_baseline_open_vs_closed.ipynb  08_identifiability_and_saturation.ipynb  09_sensor_drift_substudy.ipynb  10_sequential_degradation_tracking.ipynb  11_fault_classification.ipynb  12_resource_analysis.ipynb  13_figures_for_publication.ipynb  14_claims_and_conclusions.ipynb
research_project/results/: 05a_classification_results.json  05a_lda_results.json  05a_nuts_per_replicate.csv  07_cl_vs_ol_metrics.csv  08_identifiability_metrics.csv  09_drift_metrics.csv  10_tracking_metrics.csv  11_classification_metrics.csv  12_resource_sensitivity.csv  mcmc_posteriors_m5.npz  mcmc_timing.json  metrics_summary.json  sbi_m4_scenario_recovery.csv  sbi_posterior_final.pkl  sbi_posterior_open.pkl  sbi_sensitivity.pkl  (+2 more)
(+48 files in other folders)
