[tool.poetry]
name = "cstr-sbi"
version = "0.0.1"
description = "Closed-loop CSTR fault diagnosis via simulation-based inference."
authors = ["Simone Casolo <simone.casolo@sintef.no>"]
license = "Proprietary"
readme = "README.md"
packages = [{ include = "cstr_sbi", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

# --- M0 / M1 / M2 core ----------------------------------------------------
# JAX / diffrax / numpyro form the single source of truth for the ODE,
# the MCMC generative model, and the SBI simulator wrapper. See plan M0.
numpy = ">=1.26,<2.1"
scipy = ">=1.11"
jax = ">=0.4.30,<0.5"
jaxlib = ">=0.4.30,<0.5"
diffrax = ">=0.6.0"
numpyro = ">=0.15.0"

# --- M4 SBI training ------------------------------------------------------
sbi = ">=0.23.0"
torch = ">=2.2"

# --- M2 / M6 utilities ----------------------------------------------------
joblib = ">=1.3"
tqdm = ">=4.66"
pandas = ">=2.1"

# --- M3 / M7 analysis & plotting -----------------------------------------
matplotlib = ">=3.8"
scikit-learn = ">=1.4"   # PCA / t-SNE for the manifold notebook (M3)

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
ruff = ">=0.5"
ipykernel = ">=6.29"
jupyter = ">=1.0"

[build-system]
requires = ["poetry-core>=1.5"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
